Deleted unused files and variables

--- a/supportive_files/.config
+++ b/supportive_files/.config
@@ -1,7 +1,8 @@
 auto_play = 1
 auto_play_text = AUTOPLAY ON 
-playlist_location = D:/Personal_files/GitHub_Repository/MY_Repositories/0x41-MEDIA-PLAYER/0x41-MEDIA-PLAYER/Other test_music/
+playlist_location = D:/Personal_files/GitHub_Repository/MY_Repositories/0x41-MEDIA-PLAYER/0x41-MUSIC-PLAYER/Music/
 last_song_name = Tere Bina - Haseena Parkar (Arijit Singh) 320Kbps.mp3
 last_song_index = 1
-last_volume = 80
+last_volume = 50
 repetation_status = 0
+top_most = 1
