--- a/supportive_files/playlist.config
+++ b/supportive_files/playlist.config
@@ -1,2 +1,3 @@
-other_test.mp3
-other_test_2.mp3
+Pal - Arijit Singh 320Kbps - Copy.mp3
+Tere Bina - Haseena Parkar (Arijit Singh) 320Kbps.mp3
+test.mp3
